# python-tracing-demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: grafana-datasources.yml  grafana.ini  tempo.yaml
python_tracing_demo/: main.py  pokeapi_client.py
